Correct vertical alignment on events in small display

--- a/bootstrap/sentry.less
+++ b/bootstrap/sentry.less
@@ -465,6 +465,7 @@ footer {
       padding: 10px 10px 10px 60px;
 
       h3 {
+        margin-top: 2px;
         font-size: 14px;
       }
 
